# NimApp

./: .gitignore  CMakeLists.txt  game.cpp  gamewindow.cpp  icon.rc  installer.nsi  main.cpp  nn.cpp  sampling.cpp  test  test.cpp  train.cpp  trainwindow.cpp  utils.cpp
.github/workflows/: windows-installer.yml
dmg-root/NimNN.app/Contents/: Info.plist
dmg-root/NimNN.app/Contents/Frameworks/: libglib-2.0.0.dylib  libgraphite2.3.dylib  libgthread-2.0.0.dylib  libharfbuzz.0.dylib  libicuuc.77.dylib  libintl.8.dylib  libjasper.7.dylib  libjpeg.8.dylib  liblcms2.2.dylib  liblzma.5.dylib  libmd4c.0.dylib  libmng.2.dylib  libpng16.16.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib
dmg-root/NimNN.app/Contents/MacOS/: NimNN
dmg-root/NimNN.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
dmg-root/NimNN.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjp2.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmng.dylib  libqpdf.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
dmg-root/NimNN.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
dmg-root/NimNN.app/Contents/PlugIns/styles/: libqmacstyle.dylib
gui/: gamewindow.h  trainwindow.h
headers/: game.h  gamewindow.h  nn.h  sampling.h  train.h  trainwindow.h  utils.h
src/: game.cpp  gamewindow.cpp  icon.rc  main.cpp  nn.cpp  sampling.cpp  train.cpp  trainwindow.cpp  utils.cpp
translations/: en.ts  fr.qm  fr.ts
